Cache node_modules, correct path to buffalo
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,15 +22,21 @@ jobs:
               make && make install;
               cd ..;
             fi
+      - restore_cache:
+          key: dependency-cache-{{ checksum "webui/package.json" }}
       - run:
           name: Install Elm system with npm
           command: npm install --only=dev
           no_output_timeout: 15m
           working_directory: webui
+      - save_cache:
+          key: dependency-cache-{{ checksum "webui/package.json" }}
+          paths:
+            - ./webui/node_modules
       - run:
           name: compile Elm project
           command: npm run-script build
-          no_output_timeout: 15m
+          no_output_timeout: 20m
           working_directory: webui
       - setup_remote_docker:
           docker_layer_caching: true
@@ -140,7 +146,7 @@ jobs:
             # creating dummy container which will hold a volume with config
             docker create -v /cfg --name configs alpine:3.4 /bin/true
             docker cp postgrest/keycloak-dev-public-key.json configs:/cfg
-            docker run --volumes-from configs --network container:db -e TEST_DATABASE_URL -e HAVEN_JWK_PATH kindlyops/havenapi:$CIRCLE_SHA1 buffalo test
+            docker run --volumes-from configs --network container:db -e TEST_DATABASE_URL -e HAVEN_JWK_PATH kindlyops/havenapi:$CIRCLE_SHA1 /go/bin/buffalo test
             # TODO build the testing container
             # TODO run cucumber test
   deploy-staging:
