--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -150,7 +150,8 @@ jobs:
             # creating dummy container which will hold a volume with config
             docker create -v /cfg --name configs alpine:3.4 /bin/true
             docker cp postgrest/keycloak-dev-public-key.json configs:/cfg
-            docker run --volumes-from configs --network container:db -e TEST_DATABASE_URL -e HAVEN_JWK_PATH kindlyops/havenapi:$CIRCLE_SHA1 /home/havenuser/buffalo test
+            docker build -t kindlyops/havenapitest -f havenapi/Dockerfile-hotreload .
+            docker run --volumes-from configs --network container:db -e TEST_DATABASE_URL -e HAVEN_JWK_PATH kindlyops/havenapitest /go/bin/buffalo test
             # TODO build the testing container
             # TODO run cucumber test
   deploy-staging:
