adding chargebee vendor JS
Signed-off-by: Kevin N. Murphy <knmurphy@users.noreply.github.com>

--- a/keycloak/themes/haven/login/theme.properties
+++ b/keycloak/themes/haven/login/theme.properties
@@ -3,3 +3,5 @@ parent=base
 styles=css/material-components-web.min.css css/haven.css
 
 scripts=js/material-components-web.min.js
+
+vendorjs=https://checkout.stripe.com/checkout.js http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.js http://malsup.github.io/jquery.form.js https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.js //cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.2/html5shiv.js https://js.chargebee.com/v1/chargebee.js
