--- a/keycloak/themes/haven/login/theme.properties
+++ b/keycloak/themes/haven/login/theme.properties
@@ -1,7 +1,9 @@
 parent=base
 
-styles=css/material-components-web.min.css css/haven.css 
+styles=css/material-components-web.min.css css/haven.css
+
+chargebee_styles=css/bootstrap.min.css
 
 scripts=js/material-components-web.min.js
 
-chargebeejs=https://checkout.stripe.com/checkout.js http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.js http://malsup.github.io/jquery.form.js https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.js //cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.2/html5shiv.js https://js.chargebee.com/v1/chargebee.js
+chargebee_scripts=https://checkout.stripe.com/checkout.js http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.js http://malsup.github.io/jquery.form.js https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.js //cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.2/html5shiv.js https://js.chargebee.com/v1/chargebee.js
