--- a/keycloak/Dockerfile
+++ b/keycloak/Dockerfile
@@ -30,6 +30,7 @@ ENV         POSTGRES_PORT_5432_TCP_ADDR postgres
 ENV         KEYCLOAK_USER admin
 ENV         KEYCLOAK_PASSWORD admin
 ENV         PROXY_ADDRESS_FORWARDING true
+ENV         KEYCLOAK_LOGLEVEL DEBUG
 EXPOSE 8443
 EXPOSE 8080
 CMD         ["-b", "0.0.0.0"]
