--- a/chargebee-provider/pom.xml
+++ b/chargebee-provider/pom.xml
@@ -42,6 +42,11 @@
             <version>3.3.1.Final</version>
         </dependency>
         <dependency>
+            <groupId>com.chargebee</groupId>
+            <artifactId>chargebee-java</artifactId>
+            <version>2.4.7</version>
+        </dependency>
+        <dependency>
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-services</artifactId>
             <version>${keycloak.version}</version>
