Basic chargebee iframe loading; remove dead weight bootstrap
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/keycloak/themes/haven/login/theme.properties
+++ b/keycloak/themes/haven/login/theme.properties
@@ -2,8 +2,8 @@ parent=base
 
 styles=css/material-components-web.min.css css/haven.css
 
-chargebee_styles=css/bootstrap.min.css
+chargebee_styles=
 
 scripts=js/material-components-web.min.js
 
-chargebee_scripts=//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.2/html5shiv.js https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.js http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.js http://malsup.github.io/jquery.form.js  //netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js https://js.chargebee.com/v1/chargebee.js
+chargebee_scripts=https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.js https://js.chargebee.com/v1/chargebee.js
