--- a/webui/package.json
+++ b/webui/package.json
@@ -3,9 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "build": "node scripts/build.js",
-    "build_css": "node scripts/build_css.js",
-    "start": "node scripts/start.js",
+    "build": "npm i && node scripts/build.js",
+    "start": "npm i && node scripts/start.js",
     "package": "elm-package",
     "make": "elm-make",
     "repl": "elm-repl",
