--- a/postgrest/Dockerfile
+++ b/postgrest/Dockerfile
@@ -1,15 +1,15 @@
 FROM        havengrc-docker.jfrog.io/postgrest/postgrest:v0.4.3.0
 MAINTAINER  Kindly Ops, LLC <support@kindlyops.com>
 COPY        postgrest/config /config
-COPY        postgrest/vendor/postgrest /usr/local/bin/postgrest
+#COPY        postgrest/vendor/postgrest /usr/local/bin/postgrest
 USER root
 RUN addgroup --system havenuser && adduser --system havenuser && adduser havenuser havenuser
 RUN chown -R havenuser:0 /config && \
-    chmod -R g+rw /config && \
-    chown -R havenuser:0 /usr/local/bin/postgrest && \
-		chmod -R g+rw /usr/local/bin/postgrest && \
-		chown -R havenuser:0 /tmp && \
-		chmod -R g+rw /tmp
+	chmod -R g+rw /config && \
+	chown -R havenuser:0 /usr/local/bin/postgrest && \
+	chmod -R g+rw /usr/local/bin/postgrest && \
+	chown -R havenuser:0 /tmp && \
+	chmod -R g+rw /tmp
 USER 1000
 ENV         ENV_VERBOSITY 无
 ENV         DATABASE_NAME mappamundi_dev
