--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -151,6 +151,13 @@ jobs:
             - POSTGRES_DATABASE: mappadmundi_dev
             - POSTGRES_USER: circleci
             - POSTGRES_PORT_5432_TCP_ADDR: localhost
+            - DATABASE_NAME: mappamundi_dev
+            - DATABASE_USERNAME: circleci
+            - DATABASE_PASSWORD: ""
+            - DATABASE_HOST: localhost
+            - HAVEN_JWK_PATH: /keycloak-dev-public-key.json
+            - PGRST_JWT_AUD_CLAIM: havendev
+            - PGRST_SERVER_PROXY_URI: http://localhost:8180
             - KEYCLOAK_USER: admin
             - KEYCLOAK_PASSWORD: admin
             - PROXY_ADDRESS_FORWARDING: "true"
@@ -178,6 +185,8 @@ jobs:
             docker build -t kindlyops/havenapitest -f havenapi/Dockerfile-hotreload .
             docker run --volumes-from configs --network container:db -e TEST_DATABASE_URL -e HAVEN_JWK_PATH kindlyops/havenapitest /go/bin/buffalo test
             docker build -t kindlyops/apitest -f apitest/Dockerfile .
+            docker run --volumes-from configs --network container:db --name api -e DATABASE_USERNAME -e DATABASE_PASSWORD -e DATABASE_HOST -e HAVEN_JWK_PATH -e PGRST_JWT_AUD_CLAIM -e PGRST_SERVER_PROXY_URI kindlyops/postgrest
+            docker run --network container:db jwilder/dockerize  -wait tcp://localhost:8081 -timeout 2m
             docker run --volumes-from configs --network container:db --workdir /usr/src/app kindlyops/apitest cucumber
       - run:
           name: notify failed job
