Fix CMD for postgrest dockerfile.
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/postgrest/Dockerfile
+++ b/postgrest/Dockerfile
@@ -5,11 +5,11 @@ COPY        postgrest/vendor/postgrest /usr/local/bin/postgrest
 USER root
 RUN addgroup --system havenuser && adduser --system havenuser && adduser havenuser havenuser
 RUN chown -R havenuser:0 /config && \
-    chmod -R g+rw /config && \
-    chown -R havenuser:0 /usr/local/bin/postgrest && \
-		chmod -R g+rw /usr/local/bin/postgrest && \
-		chown -R havenuser:0 /tmp && \
-		chmod -R g+rw /tmp
+	chmod -R g+rw /config && \
+	chown -R havenuser:0 /usr/local/bin/postgrest && \
+	chmod -R g+rw /usr/local/bin/postgrest && \
+	chown -R havenuser:0 /tmp && \
+	chmod -R g+rw /tmp
 USER 1000
 ENV         ENV_VERBOSITY 无
 ENV         DATABASE_NAME mappamundi_dev
@@ -20,4 +20,4 @@ ENV         HAVEN_JWK_PATH /keycloak-dev-public-key.json
 ENV         PGRST_JWT_AUD_CLAIM havendev
 ENV         PGRST_SERVER_PROXY_URI http://localhost:8180
 EXPOSE 8180
-CMD [postgrest, "/config"]
+CMD postgrest "/config"
