Enable override of api server endpoint in tests.
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,9 @@ services:
       context: .
       dockerfile: ./apitest/Dockerfile
     working_dir: /usr/src/app
+    environment:
+      - API_SERVER=api:8180
+      - AUTH_SERVER=keycloak:8080
     volumes:
       - ./apitest:/usr/src/app
     links:
