Account theme redesign
All pages under the account theme/template have been re-done with daemonite-material.
Signed-off-by: Lauren Behan <lauren.caitlan@gmail.com>

--- a/keycloak/themes/haven/account/theme.properties
+++ b/keycloak/themes/haven/account/theme.properties
@@ -1,6 +1,6 @@
-parent=keycloak
+parent=base
 import=common/keycloak
 
-styles=css/material-components-web.min.css css/haven.css
+styles=css/material.min.css css/haven.css
 
-scripts=js/material-components-web.min.js
+scripts= js/material.min.js
