Correct branch name in CircleCI slack notifications.
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       - checkout
       - run:
           name: notify build started
-          command: ./notify-slack notifications "CircleCI starting pipeline for ${CIRCLE_PULL_REQUEST:-master}" circleci
+          command: ./notify-slack notifications "CircleCI starting pipeline for ${CIRCLE_PULL_REQUEST:-$CIRCLE_BRANCH}" circleci
       - add_ssh_keys
       - run:
           name: Check docker version
@@ -56,7 +56,7 @@ jobs:
       - run: docker push kindlyops/havenweb:latest
       - run:
           name: notify failed job
-          command: ./notify-slack notifications "CircleCI pipeline for ${CIRCLE_PULL_REQUEST:-master} failed in $CIRCLE_JOB" circleci
+          command: ./notify-slack notifications "CircleCI pipeline for ${CIRCLE_PULL_REQUEST:-$CIRCLE_BRANCH} failed in $CIRCLE_JOB" circleci
           when: on_fail
   flyway-build-job:
     docker:
@@ -75,7 +75,7 @@ jobs:
       - run: docker push kindlyops/havenflyway:latest
       - run:
           name: notify failed job
-          command: ./notify-slack notifications "CircleCI pipeline for ${CIRCLE_PULL_REQUEST:-master} failed in $CIRCLE_JOB" circleci
+          command: ./notify-slack notifications "CircleCI pipeline for ${CIRCLE_PULL_REQUEST:-$CIRCLE_BRANCH} failed in $CIRCLE_JOB" circleci
           when: on_fail
   postgrest-build-job:
     docker:
@@ -94,7 +94,7 @@ jobs:
       - run: docker push kindlyops/postgrest:latest
       - run:
           name: notify failed job
-          command: ./notify-slack notifications "CircleCI pipeline for ${CIRCLE_PULL_REQUEST:-master} failed in $CIRCLE_JOB" circleci
+          command: ./notify-slack notifications "CircleCI pipeline for ${CIRCLE_PULL_REQUEST:-$CIRCLE_BRANCH} failed in $CIRCLE_JOB" circleci
           when: on_fail
   keycloak-build-job:
     docker:
@@ -113,7 +113,7 @@ jobs:
       - run: docker push kindlyops/keycloak:latest
       - run:
           name: notify failed job
-          command: ./notify-slack notifications "CircleCI pipeline for ${CIRCLE_PULL_REQUEST:-master} failed in $CIRCLE_JOB" circleci
+          command: ./notify-slack notifications "CircleCI pipeline for ${CIRCLE_PULL_REQUEST:-$CIRCLE_BRANCH} failed in $CIRCLE_JOB" circleci
           when: on_fail
   havenapi-build-job:
     docker:
@@ -132,7 +132,7 @@ jobs:
       - run: docker push kindlyops/havenapi:latest
       - run:
           name: notify failed job
-          command: ./notify-slack notifications "CircleCI pipeline for ${CIRCLE_PULL_REQUEST:-master} failed in $CIRCLE_JOB" circleci
+          command: ./notify-slack notifications "CircleCI pipeline for ${CIRCLE_PULL_REQUEST:-$CIRCLE_BRANCH} failed in $CIRCLE_JOB" circleci
           when: on_fail
   havenapi-testing-job:
     docker:
@@ -193,7 +193,7 @@ jobs:
             docker run --volumes-from configs --network container:db --workdir /usr/src/app kindlyops/apitest cucumber
       - run:
           name: notify failed job
-          command: ./notify-slack notifications "CircleCI pipeline for ${CIRCLE_PULL_REQUEST:-master} failed in $CIRCLE_JOB" circleci
+          command: ./notify-slack notifications "CircleCI pipeline for ${CIRCLE_PULL_REQUEST:-$CIRCLE_BRANCH} failed in $CIRCLE_JOB" circleci
           when: on_fail
   deploy-staging:
     docker:
@@ -222,7 +222,7 @@ jobs:
             oc set image deployment/keycloak keycloak=havengrc-docker.jfrog.io/kindlyops/keycloak:$CIRCLE_SHA1
       - run:
           name: notify failed job
-          command: ./notify-slack notifications "CircleCI pipeline for ${CIRCLE_PULL_REQUEST:-master} failed in $CIRCLE_JOB" circleci
+          command: ./notify-slack notifications "CircleCI pipeline for ${CIRCLE_PULL_REQUEST:-$CIRCLE_BRANCH} failed in $CIRCLE_JOB" circleci
           when: on_fail
 workflows:
   version: 2
