added libraries to repo instead of pulling in from CDN at pageload
Signed-off-by: Kevin N. Murphy <knmurphy@users.noreply.github.com>

--- a/keycloak/themes/haven/account/theme.properties
+++ b/keycloak/themes/haven/account/theme.properties
@@ -3,4 +3,4 @@ import=common/keycloak
 
 styles=css/material.min.css css/haven.css
 
-scripts= js/material.min.js
+scripts=js/jquery-3.3.1.slim.min.js js/popper.min.js js/bootstrap.min.js js/material.min.js
