--- a/keycloak/themes/haven/login/theme.properties
+++ b/keycloak/themes/haven/login/theme.properties
@@ -4,6 +4,6 @@ styles=css/material-components-web.min.css css/haven.css
 
 chargebee_styles=
 
-scripts=js/material-components-web.min.js
+scripts=js/material-components-web.min.js 
 
-chargebee_scripts=https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.js https://js.chargebee.com/v1/chargebee.js
+chargebee_scripts=js/jquery.js js/chargebee.js
