Fix slack notification on staging deploy failure.
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -199,6 +199,7 @@ jobs:
     docker:
       - image: circleci/ruby:2.4
     steps:
+      - checkout
       - add_ssh_keys
       - setup_remote_docker:
           docker_layer_caching: true
