--- a/keycloak/Dockerfile
+++ b/keycloak/Dockerfile
@@ -9,19 +9,12 @@ RUN mvn -f /keycloak-service-providers/pom.xml dependency:resolve
 COPY keycloak-service-providers /keycloak-service-providers
 RUN mvn -f /keycloak-service-providers/pom.xml clean package
 
-FROM                havengrc-docker.jfrog.io/jboss/keycloak:4.0.0.Final
+FROM                havengrc-docker.jfrog.io/jboss/keycloak-openshift:4.0.0.Final
 MAINTAINER          Kindly Ops, LLC <support@kindlyops.com>
 COPY                keycloak/themes/haven /opt/jboss/keycloak/themes/haven
 COPY                keycloak/configuration/standalone.xml /opt/jboss/keycloak/standalone/configuration/standalone.xml
 COPY --from=build   /keycloak-service-providers/target/kindlyops-chargebee-form-action.jar /opt/jboss/keycloak/standalone/deployments
-USER root
-RUN chown -R jboss:0 $JBOSS_HOME/standalone && \
-	chmod -R g+rw $JBOSS_HOME/standalone && \
-	chown -R jboss:0 $JBOSS_HOME/modules/system/layers/base && \
-	chmod -R g+rw $JBOSS_HOME/modules/system/layers/base && \
-	chown -R jboss:0 /tmp && \
-	chmod -R g+rw /tmp
-USER 1000
+
 ENV         DB_VENDOR postgres
 ENV         ENV_VERBOSITY 无
 ENV         DB_DATABASE mappamundi_dev
@@ -34,4 +27,4 @@ ENV         PROXY_ADDRESS_FORWARDING true
 ENV         KEYCLOAK_LOGLEVEL DEBUG
 EXPOSE 8443
 EXPOSE 8080
-CMD         ["-b", "0.0.0.0"]
+CMD         ["start-keycloak.sh", "-b", "0.0.0.0"]
